force-app/main/default/objects/Case/fields/AssignmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentEndDate__c</fullName>
    <formula>Assignment__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment End Date</label>
    <type>Date</type>
</CustomField>