force-app/main/default/objects/Case/fields/AssignmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentStartDate__c</fullName>
    <formula>Assignment__r.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Start Date</label>
    <type>Date</type>
</CustomField>