force-app/main/default/objects/Case/fields/Billing_Type_frm__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type_frm__c</fullName>
    <formula>TEXT(Resource_Request__r.Billing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>