force-app/main/default/objects/Case/fields/CaseExternalOffNotificationDate_frm__c.field-meta.xml
<CustomField>
    <fullName>CaseExternalOffNotificationDate_frm__c</fullName>
    <formula>IF ( ( Assignment__r.EndDate__c - 14 ) &gt; TODAY(), Assignment__r.EndDate__c - 14, TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ExternalOff Notification Date</label>
    <type>Date</type>
</CustomField>