force-app/main/default/objects/Case/fields/CaseExternalOnNotificationDate_frm__c.field-meta.xml
<CustomField>
    <fullName>CaseExternalOnNotificationDate_frm__c</fullName>
    <formula>IF ( 
  Assignment__r.StartDate__c  &lt; (TODAY() + 14),
    TODAY(),
    Assignment__r.StartDate__c - 14
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case External On Notification Date</label>
    <type>Date</type>
</CustomField>