force-app/main/default/objects/Case/fields/CaseInternalOffNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>CaseInternalOffNotificationDate__c</fullName>
    <formula>IF ( ( EndDate__c - 14 ) &gt; TODAY(), EndDate__c - 14, TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Internal Off Notification Date</label>
    <type>Date</type>
</CustomField>