force-app/main/default/objects/Case/fields/ContactLastDayAtWork__c.field-meta.xml
<CustomField>
    <fullName>ContactLastDayAtWork__c</fullName>
    <description>Contact Last Day at Office</description>
    <label>Contact Last Day at Office</label>
    <type>Date</type>
</CustomField>