force-app/main/default/objects/Case/fields/ContactName_frm__c.field-meta.xml
<CustomField>
    <fullName>ContactName_frm__c</fullName>
    <formula>Contact.FirstName + &apos; &apos; + Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>