force-app/main/default/objects/Case/fields/Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start__c</fullName>
    <label>Contract Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MonthsGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>