force-app/main/default/objects/Case/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Umowa o Pracę</fullName>
            </value>
            <value>
                <fullName>Umowa o Pracę z kosztami autorskimi - 90%</fullName>
            </value>
            <value>
                <fullName>Umowa o Pracę z kosztami autorskimi ...</fullName>
            </value>
            <value>
                <fullName>Umowa o Dzieło</fullName>
            </value>
            <value>
                <fullName>Umowa Zlecenie</fullName>
            </value>
            <value>
                <fullName>Inny rodzaj umowy</fullName>
            </value>
            <value>
                <fullName>B2B (stawka netto za godzinę)</fullName>
                <isActive>false</isActive>
                <label>B2B (stawka netto za godzinę)</label>
            </value>
            <value>
                <fullName>UoP</fullName>
                <isActive>false</isActive>
                <label>UoP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>