force-app/main/default/objects/Case/fields/Customer_frm__c.field-meta.xml
<CustomField>
    <fullName>Customer_frm__c</fullName>
    <formula>Resource_Request__r.Account_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>