force-app/main/default/objects/Case/fields/Deal_Close__c.field-meta.xml
<CustomField>
    <fullName>Deal_Close__c</fullName>
    <label>Deal Close</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MonthsGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>