force-app/main/default/objects/Case/fields/DealMonth__c.field-meta.xml
<CustomField>
    <fullName>DealMonth__c</fullName>
    <label>DealMonth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MonthsGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>