force-app/main/default/objects/Case/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>IF(RecordType.Name = &apos;External Offboarding&apos;, AssignmentEndDate__c, 
IF(RecordType.Name = &apos;Internal Offboarding&apos;, ContactLastDayAtWork__c, WorkEndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>