force-app/main/default/objects/Case/fields/ExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>ExecutionDate__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;ExternalOnboarding&apos;, Assignment__r.StartDate__c, IF(RecordType.DeveloperName = &apos;ExternalOffboarding&apos;,  Assignment__r.EndDate__c , NULL))</formula>
    <label>Execution Date</label>
    <type>Date</type>
</CustomField>