force-app/main/default/objects/Case/fields/ExecutionDate_frm__c.field-meta.xml
<CustomField>
    <fullName>ExecutionDate_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;External Onboarding&apos;, Assignment__r.StartDate__c, 
IF(RecordType.DeveloperName == &apos;External Offboarding&apos;, Assignment__r.EndDate__c , null) 
)</formula>
    <label>Date</label>
    <type>Date</type>
</CustomField>