force-app/main/default/objects/Case/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guardian</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Guardian)</relationshipLabel>
    <relationshipName>GuardianCases</relationshipName>
    <type>Lookup</type>
</CustomField>