force-app/main/default/objects/Case/fields/KAM_frm__c.field-meta.xml
<CustomField>
    <fullName>KAM_frm__c</fullName>
    <formula>Resource_Request__r.Requestor_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KAM</label>
    <type>Text</type>
</CustomField>