force-app/main/default/objects/Case/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>