force-app/main/default/objects/Case/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Np. oddział na ul. Morwowej 1 w Lublinie</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lublin Hamleta</fullName>
            </value>
            <value>
                <fullName>Lublin Morwowa</fullName>
            </value>
            <value>
                <fullName>Kielce IX Wieków</fullName>
            </value>
            <value>
                <fullName>Zdalnie</fullName>
            </value>
            <value>
                <fullName>U klienta [Other location is mandatory]</fullName>
            </value>
            <value>
                <fullName>Inne [Other location is mandatory]</fullName>
            </value>
            <value>
                <fullName>Warszawa Karolkowa</fullName>
            </value>
            <value>
                <fullName>Poznań Szyperska</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>