force-app/main/default/objects/Case/fields/Location_frm__c.field-meta.xml
<CustomField>
    <fullName>Location_frm__c</fullName>
    <formula>TEXT(Location__c) + IF (NOT(ISBLANK(OtherLocation__c)), &apos; ( &apos; + OtherLocation__c + &apos; )&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>