force-app/main/default/objects/Case/fields/NewUserB2B__c.field-meta.xml
<CustomField>
    <fullName>NewUserB2B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New BS User is on B2B</description>
    <inlineHelpText>Is new User on Business-to-business?</inlineHelpText>
    <label>On B2B?</label>
    <type>Checkbox</type>
</CustomField>