force-app/main/default/objects/Case/fields/NewUserEmail__c.field-meta.xml
<CustomField>
    <fullName>NewUserEmail__c</fullName>
    <description>New BS User Email</description>
    <label>Britenet Email</label>
    <type>Email</type>
</CustomField>