force-app/main/default/objects/Case/fields/NewUserFirstName__c.field-meta.xml
<CustomField>
    <fullName>NewUserFirstName__c</fullName>
    <description>New BS User First Name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>