force-app/main/default/objects/Case/fields/NewUserLastName__c.field-meta.xml
<CustomField>
    <fullName>NewUserLastName__c</fullName>
    <description>New BS User Last Name</description>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>