force-app/main/default/objects/Case/fields/NewUserProjectRole__c.field-meta.xml
<CustomField>
    <fullName>NewUserProjectRole__c</fullName>
    <description>BS Project Role is converted to Id during process</description>
    <label>Project Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>