force-app/main/default/objects/Case/fields/NewUserProjectRoleId__c.field-meta.xml
<CustomField>
    <fullName>NewUserProjectRoleId__c</fullName>
    <description>BS Project Role Id</description>
    <label>Project Role Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>