force-app/main/default/objects/Case/fields/NewUserTitle__c.field-meta.xml
<CustomField>
    <fullName>NewUserTitle__c</fullName>
    <description>Title of New BS User</description>
    <label>Position</label>
    <length>128</length>
    <type>Text</type>
</CustomField>