force-app/main/default/objects/Case/fields/Notice_Period_Comment__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Comment__c</fullName>
    <label>Notice Period Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>