force-app/main/default/objects/Case/fields/PersonalPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonalPhone__c</fullName>
    <label>Personal Phone</label>
    <type>Phone</type>
</CustomField>