force-app/main/default/objects/Case/fields/Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Email__c</fullName>
    <label>Project Manager Email</label>
    <type>Email</type>
</CustomField>