force-app/main/default/objects/Case/fields/Recommender__c.field-meta.xml
<CustomField>
    <fullName>Recommender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommender</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Recommender)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>