force-app/main/default/objects/Case/fields/Requested_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Requested_Equipment__c</fullName>
    <label>Requested Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipment_Types</valueSetName>
    </valueSet>
</CustomField>