force-app/main/default/objects/Case/fields/Requested_Equipment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requested_Equipment_Comments__c</fullName>
    <label>Requested Equipment Comments</label>
    <type>TextArea</type>
</CustomField>