force-app/main/default/objects/Case/fields/Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Request</label>
    <referenceTo>BTN_ResourceRequest__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>