force-app/main/default/objects/Case/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <label>Responsibilities</label>
    <type>TextArea</type>
</CustomField>