force-app/main/default/objects/Case/fields/Salary_frm__c.field-meta.xml
<CustomField>
    <fullName>Salary_frm__c</fullName>
    <formula>IF ( CONTAINS(TEXT(ContractType__c), &apos;B2B&apos;), SalaryB2B__c, SalaryUoP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>