force-app/main/default/objects/Case/fields/SalaryB2B__c.field-meta.xml
<CustomField>
    <fullName>SalaryB2B__c</fullName>
    <inlineHelpText>Stawka za godzinę, netto</inlineHelpText>
    <label>Salary (za godzinę netto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>