force-app/main/default/objects/Case/fields/SalaryUoP__c.field-meta.xml
<CustomField>
    <fullName>SalaryUoP__c</fullName>
    <inlineHelpText>Kwota za miesięczne wynagrodzenie, brutto</inlineHelpText>
    <label>Salary (miesięcznie brutto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>