force-app/main/default/objects/Case/fields/SendNotification__c.field-meta.xml
<CustomField>
    <fullName>SendNotification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True when new record or affiliated Assignment has been edited.</description>
    <label>SendNotification</label>
    <type>Checkbox</type>
</CustomField>