force-app/main/default/objects/Case/fields/UserEndDate__c.field-meta.xml
<CustomField>
    <fullName>UserEndDate__c</fullName>
    <description>Work End of Employee</description>
    <label>User Work End Date</label>
    <type>Date</type>
</CustomField>