force-app/main/default/objects/Case/fields/WorkEndDate__c.field-meta.xml
<CustomField>
    <fullName>WorkEndDate__c</fullName>
    <label>Work End Date</label>
    <type>Date</type>
</CustomField>