force-app/main/default/objects/Case/fields/WorkStartDate__c.field-meta.xml
<CustomField>
    <fullName>WorkStartDate__c</fullName>
    <label>Work Start Date</label>
    <type>Date</type>
</CustomField>