force-app/main/default/objects/Case/fields/WorkStartDateComment__c.field-meta.xml
<CustomField>
    <fullName>WorkStartDateComment__c</fullName>
    <label>Work Start Date Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>