force-app/main/default/objects/Case/recordTypes/ExternalOffboarding.recordType-meta.xml
<RecordType>
    <fullName>ExternalOffboarding</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>External Offboarding Case</description>
    <label>External Offboarding</label>
</RecordType>