force-app/main/default/objects/Case/recordTypes/ExternalOnboarding.recordType-meta.xml
<RecordType>
    <fullName>ExternalOnboarding</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>External Onboarding Case</description>
    <label>External Onboarding</label>
</RecordType>