force-app/main/default/objects/Case/recordTypes/InternalOffboarding.recordType-meta.xml
<RecordType>
    <fullName>InternalOffboarding</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Internal Offboarding Case</description>
    <label>Internal Offboarding</label>
</RecordType>