force-app/main/default/objects/Case/recordTypes/InternalOnboarding.recordType-meta.xml
<RecordType>
    <fullName>InternalOnboarding</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Internal Onboarding Case</description>
    <label>Internal Onboarding</label>
</RecordType>