force-app/main/default/objects/Case/validationRules/vDealMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>vDealMonth</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;External&apos;) &amp;&amp; 
    ISPICKVAL(Status , &apos;Approved&apos;) &amp;&amp;
    ISBLANK(TEXT(DealMonth__c))</errorConditionFormula>
    <errorDisplayField>DealMonth__c</errorDisplayField>
    <errorMessage>Please set Deal Month</errorMessage>
</ValidationRule>