force-app/main/default/objects/Case/validationRules/vLeader.validationRule-meta.xml
<ValidationRule>
    <fullName>vLeader</fullName>
    <active>true</active>
    <description>For Internal Onboarding Leader is Required</description>
    <errorConditionFormula>(RecordType.DeveloperName = &apos;InternalOnboarding&apos;) &amp;&amp; ISBLANK(Leader__c) 
|| (RecordType.DeveloperName = &apos;InternalOnboarding&apos;) &amp;&amp; (Leader__r.Id = ContactId)</errorConditionFormula>
    <errorMessage>Please specify proper Contact Leader</errorMessage>
</ValidationRule>