force-app/main/default/objects/Case/listViews/AllExternalCases.listView-meta.xml
<ListView>
    <fullName>AllExternalCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Assignment__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ExternalOffboarding,Case.ExternalOnboarding</value>
    </filters>
    <label>All External Cases</label>
    <language>en_US</language>
</ListView>