force-app/main/default/objects/Case/listViews/BTN_HumanResources_Case.listView-meta.xml
<ListView>
    <fullName>BTN_HumanResources_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Human Resources</label>
    <queue>BTN_HumanResources</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>