force-app/main/default/objects/Case/listViews/Case_Internal_offboarding.listView-meta.xml
<ListView>
    <fullName>Case_Internal_offboarding</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.InternalOffboarding</value>
    </filters>
    <label>Case - Internal offboarding</label>
    <language>en_US</language>
</ListView>