force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Assignment__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>EndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
    <language>en_US</language>
</ListView>