force-app/main/default/objects/Case/listViews/MyOpenCases.listView-meta.xml
<ListView>
    <fullName>MyOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Assignment__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>EndDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Cases</label>
    <language>en_US</language>
</ListView>