force-app/main/default/objects/Case/listViews/Resource_Managers_Case.listView-meta.xml
<ListView>
    <fullName>Resource_Managers_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Assignment__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>EndDate__c</columns>
    <filterScope>Queue</filterScope>
    <label>Resource Managers</label>
    <language>en_US</language>
    <queue>Resource_Managers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>